# diploma-thesis

./: .cspell.json  .pre-commit-config.yaml  README.md  backlog.txt  pyproject.toml
.cspell/: words.txt
.github/: dependabot.yaml
.github/workflows/: ci.yaml
src/diploma_thesis/: data.py  load_dataset.py
tests/: test_foo.py
tmp/: data.py  dataset_info.py  main.py
