[tool.poetry]
name = "diploma-thesis"
version = "0.1.0"
description = "Diploma Thesis"
authors = ["Alexis Zamanis <alexiszamanis1997@gmail.com>"]
readme = "README.md"
packages = [{ include = "diploma_thesis", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"


[tool.black]
skip-magic-trailing-comma = true


[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
