[tool.poetry]
name = "diploma-thesis"
version = "0.1.0"
description = "Diploma Thesis"
authors = ["Alexis Zamanis <alexiszamanis1997@gmail.com>"]
readme = "README.md"
packages = [{ include = "diploma_thesis", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.11.0"
dill = { git = "https://github.com/uqfoundation/dill.git" }
requests = "^2.29.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
pylint = "^2.17.3"
pytest = "^7.3.1"
pytest-xdist = "^3.2.1"
ruff = "^0.0.263"
types-requests = "^2.31.0.1"
types-tqdm = "^4.65.0.1"


[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]


[tool.black]
skip-magic-trailing-comma = true


[tool.mypy]
strict = true


[tool.pylint.main]
enable = "all"
jobs = 0
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.empty_comment",
    "pylint.extensions.emptystring",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.magic_value",
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.pylint.format]
max-line-length = 88


[tool.pytest.ini_options]
addopts = "--numprocesses=auto"
testpaths = ["tests"]


[tool.ruff]
ignore = ["COM812"]
select = ["ALL"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"*_test.py" = ["S101"]
"test_*.py" = ["S101"]

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
