[project]
dependencies = ["torch==2.6.0+cu126", "transformers==4.49.0"]
name = "diploma-thesis"
requires-python = "==3.13.2"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pre-commit==4.1.0"]

[tool.poetry]
package-mode = false
requires-poetry = "2.1.1"

[[tool.poetry.source]]
name = "torch"
priority = "supplemental"
url = "https://download.pytorch.org/whl/cu126"

[tool.ruff]
fix = true
preview = true
required-version = "0.11.0"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["CPY"]
select = ["ALL"]
